--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "server": "json-server db/db.json -p 5000"
+    "server": "cp -n db/db.json.template db/db.json & json-server db/db.json -p 5000"
   },
   "private": true,
   "dependencies": {
